# agent-redteam-lab

./: .env.example  .gitignore  README.md  attack.py  conftest.py  pyproject.toml
docs/: ARCHITECTURE.md  COMPETITION_RESEARCH.md  EVAL_PROTOCOL.md  KAGGLE_ADAPTER_SPEC.md  MIGRATION_AUDIT.md  PUBLIC_SAFE_CHECKLIST.md  RISK_MODEL.md  SCORE_LOG.md  SYNC_FROM_UPSTREAM.md  THREAT_MODEL.md
kaggle/: README.md  attack.py  candidate_bank.jsonl  portfolio_selector.py  utils.py
scripts/: build_kaggle_notebook.py  eval_kaggle_60s.sh  export_candidate_bank.py  gen_candidates.py  package_kaggle_submission.sh  parse_artifacts.py  public_safety_scan.py  rank_candidates.py  smoke_kaggle.sh  sync_from_upstream.py  validate_candidate_bank.py
tests/: test_candidate_bank_schema.py  test_candidate_schema.py  test_guardrail.py  test_kaggle_attack_contract.py  test_kaggle_notebook.py  test_plugin_sandbox.py  test_portfolio.py  test_portfolio_selector.py  test_public_safety_scan.py  test_replay.py  test_risk.py  test_schema_consistency.py  test_strategies.py  test_sync.py  test_validate_candidate_bank.py  test_verified_families.py
